gen/SLParser.java
// Generated from /Users/ahuertas/sl-interpreter/grammar/SL.g4 by ANTLR 4.10.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class SLParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.10.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45, 
		T__45=46, T__46=47, T__47=48, T__48=49, T__49=50, T__50=51, T__51=52, 
		T__52=53, T__53=54, T__54=55, T__55=56, T__56=57, T__57=58, T__58=59, 
		T__59=60, T__60=61, T__61=62, T__62=63, T__63=64, T__64=65, T__65=66, 
		T__66=67, T__67=68, T__68=69, T__69=70, T__70=71, T__71=72, T__72=73, 
		T__73=74, T__74=75, T__75=76, T__76=77, T__77=78, T__78=79, T__79=80, 
		T__80=81, T__81=82, T__82=83, T__83=84, T__84=85, T__85=86, T__86=87, 
		T__87=88, ID=89, TK_CADENA=90, FLOAT_EXP=91, FLOAT=92, INTEGER_EXP=93, 
		INTEGER=94, COMMENT=95, LINE_COMMENT=96, WS=97;
	public static final int
		RULE_s = 0, RULE_declaration = 1, RULE_dec_constants = 2, RULE_dec_constants_continue = 3, 
		RULE_constants_statement_terminator = 4, RULE_dec_variables = 5, RULE_id_list = 6, 
		RULE_id_list_cont = 7, RULE_dec_variables_continue = 8, RULE_dec_types = 9, 
		RULE_dec_types_continue = 10, RULE_types_statement_terminator = 11, RULE_var_statement_terminator = 12, 
		RULE_type = 13, RULE_register = 14, RULE_register_members = 15, RULE_structured_type = 16, 
		RULE_vector_index_size = 17, RULE_matrix_index_list = 18, RULE_matrix_index_list_cont = 19, 
		RULE_main_program = 20, RULE_main_program_statement_terminator = 21, RULE_main_sentence = 22, 
		RULE_routine = 23, RULE_routine_declaration = 24, RULE_routine_dec_constants = 25, 
		RULE_routine_dec_constants_continue = 26, RULE_routine_dec_variables = 27, 
		RULE_routine_dec_variables_continue = 28, RULE_routine_dec_types = 29, 
		RULE_routine_dec_types_continue = 30, RULE_routine_signature = 31, RULE_routine_parameters = 32, 
		RULE_routine_return_type = 33, RULE_routine_parameter = 34, RULE_routine_parameter_separator = 35, 
		RULE_routine_param = 36, RULE_routine_param_separtor = 37, RULE_routine_program = 38, 
		RULE_routine_statement_terminator = 39, RULE_routine_sentence = 40, RULE_if_stat = 41, 
		RULE_if_program = 42, RULE_if_statement_terminator = 43, RULE_else_if = 44, 
		RULE_else_if_program = 45, RULE_else_if_statement_terminator = 46, RULE_else_sentence = 47, 
		RULE_else_program = 48, RULE_else_program_mid = 49, RULE_else_statement_terminator = 50, 
		RULE_else_mid_statement_terminator = 51, RULE_eval = 52, RULE_eval_cases = 53, 
		RULE_eval_case_statement_terminator = 54, RULE_eval_else_program = 55, 
		RULE_eval_else_statement_terminator = 56, RULE_eval_program = 57, RULE_eval_statement_terminator = 58, 
		RULE_while_stat = 59, RULE_until = 60, RULE_until_program = 61, RULE_until_statement_terminator = 62, 
		RULE_from = 63, RULE_from_step = 64, RULE_rep_body = 65, RULE_rep_body_program = 66, 
		RULE_rep_statement_terminator = 67, RULE_p_exp = 68, RULE_op_term = 69, 
		RULE_term = 70, RULE_id_f = 71, RULE_id_complement = 72, RULE_id_extraction = 73, 
		RULE_parameter = 74, RULE_param = 75, RULE_p_sep = 76, RULE_assign = 77, 
		RULE_prog_exp = 78, RULE_id_exp = 79, RULE_t = 80, RULE_unop_operand = 81, 
		RULE_function_call = 82, RULE_vec_sep = 83, RULE_condition = 84, RULE_vector_value = 85, 
		RULE_vector_literal = 86, RULE_vector_sep = 87, RULE_literal = 88, RULE_constant_literal = 89, 
		RULE_unop = 90, RULE_op = 91, RULE_func = 92, RULE_id = 93, RULE_tk_numero = 94;
	private static String[] makeRuleNames() {
		return new String[] {
			"s", "declaration", "dec_constants", "dec_constants_continue", "constants_statement_terminator", 
			"dec_variables", "id_list", "id_list_cont", "dec_variables_continue", 
			"dec_types", "dec_types_continue", "types_statement_terminator", "var_statement_terminator", 
			"type", "register", "register_members", "structured_type", "vector_index_size", 
			"matrix_index_list", "matrix_index_list_cont", "main_program", "main_program_statement_terminator", 
			"main_sentence", "routine", "routine_declaration", "routine_dec_constants", 
			"routine_dec_constants_continue", "routine_dec_variables", "routine_dec_variables_continue", 
			"routine_dec_types", "routine_dec_types_continue", "routine_signature", 
			"routine_parameters", "routine_return_type", "routine_parameter", "routine_parameter_separator", 
			"routine_param", "routine_param_separtor", "routine_program", "routine_statement_terminator", 
			"routine_sentence", "if_stat", "if_program", "if_statement_terminator", 
			"else_if", "else_if_program", "else_if_statement_terminator", "else_sentence", 
			"else_program", "else_program_mid", "else_statement_terminator", "else_mid_statement_terminator", 
			"eval", "eval_cases", "eval_case_statement_terminator", "eval_else_program", 
			"eval_else_statement_terminator", "eval_program", "eval_statement_terminator", 
			"while_stat", "until", "until_program", "until_statement_terminator", 
			"from", "from_step", "rep_body", "rep_body_program", "rep_statement_terminator", 
			"p_exp", "op_term", "term", "id_f", "id_complement", "id_extraction", 
			"parameter", "param", "p_sep", "assign", "prog_exp", "id_exp", "t", "unop_operand", 
			"function_call", "vec_sep", "condition", "vector_value", "vector_literal", 
			"vector_sep", "literal", "constant_literal", "unop", "op", "func", "id", 
			"tk_numero"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'programa'", "'const'", "'inicio'", "'tipos'", "'var'", "'='", 
			"';'", "':'", "','", "'cadena'", "'numerico'", "'logico'", "'registro'", 
			"'{'", "'}'", "'vector'", "'['", "']'", "'matriz'", "'*'", "'fin'", "'subrutina'", 
			"'('", "')'", "'retorna'", "'ref'", "'si'", "'sino'", "'eval'", "'caso'", 
			"'mientras'", "'repetir'", "'hasta'", "'desde'", "'paso'", "'.'", "'true'", 
			"'false'", "'+'", "'-'", "'not'", "'<'", "'<>'", "'<='", "'/'", "'%'", 
			"'=='", "'>'", "'and'", "'^'", "'>='", "'or'", "'paramval'", "'pcount'", 
			"'pos'", "'dim'", "'random'", "'imprimir'", "'sec'", "'cls'", "'set_stdin'", 
			"'leer'", "'set_stdout'", "'set_ifs'", "'sin'", "'abs'", "'sqrt'", "'arctan'", 
			"'str'", "'ascii'", "'strdup'", "'cos'", "'strlen'", "'dec'", "'substr'", 
			"'eof'", "'tan'", "'exp'", "'upper'", "'get_ifs'", "'val'", "'inc'", 
			"'alen'", "'int'", "'log'", "'lower'", "'mem'", "'ord'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, "ID", "TK_CADENA", "FLOAT_EXP", "FLOAT", 
			"INTEGER_EXP", "INTEGER", "COMMENT", "LINE_COMMENT", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "SL.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public SLParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class SContext extends ParserRuleContext {
		public DeclarationContext declaration() {
			return getRuleContext(DeclarationContext.class,0);
		}
		public IdContext id() {
			return getRuleContext(IdContext.class,0);
		}
		public SContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_s; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SLVisitor ) return ((SLVisitor<? extends T>)visitor).visitS(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SContext s() throws RecognitionException {
		SContext _localctx = new SContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_s);
		try {
			setState(195);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__1:
			case T__2:
			case T__3:
			case T__4:
				enterOuterAlt(_localctx, 1);
				{
				setState(190);
				declaration();
				}
				break;
			case T__0:
				enterOuterAlt(_localctx, 2);
				{
				setState(191);
				match(T__0);
				setState(192);
				id();
				setState(193);
				declaration();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclarationContext extends ParserRuleContext {
		public Dec_constantsContext dec_constants() {
			return getRuleContext(Dec_constantsContext.class,0);
		}
		public Main_programContext main_program() {
			return getRuleContext(Main_programContext.class,0);
		}
		public Dec_typesContext dec_types() {
			return getRuleContext(Dec_typesContext.class,0);
		}
		public Dec_variablesContext dec_variables() {
			return getRuleContext(Dec_variablesContext.class,0);
		}
		public DeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaration; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SLVisitor ) return ((SLVisitor<? extends T>)visitor).visitDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclarationContext declaration() throws RecognitionException {
		DeclarationContext _localctx = new DeclarationContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_declaration);
		try {
			setState(205);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__1:
				enterOuterAlt(_localctx, 1);
				{
				setState(197);
				match(T__1);
				setState(198);
				dec_constants();
				}
				break;
			case T__2:
				enterOuterAlt(_localctx, 2);
				{
				setState(199);
				match(T__2);
				setState(200);
				main_program();
				}
				break;
			case T__3:
				enterOuterAlt(_localctx, 3);
				{
				setState(201);
				match(T__3);
				setState(202);
				dec_types();
				}
				break;
			case T__4:
				enterOuterAlt(_localctx, 4);
				{
				setState(203);
				match(T__4);
				setState(204);
				dec_variables();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Dec_constantsContext extends ParserRuleContext {
		public IdContext id() {
			return getRuleContext(IdContext.class,0);
		}
		public Constant_literalContext constant_literal() {
			return getRuleContext(Constant_literalContext.class,0);
		}
		public Constants_statement_terminatorContext constants_statement_terminator() {
			return getRuleContext(Constants_statement_terminatorContext.class,0);
		}
		public Dec_constants_continueContext dec_constants_continue() {
			return getRuleContext(Dec_constants_continueContext.class,0);
		}
		public Dec_constantsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dec_constants; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SLVisitor ) return ((SLVisitor<? extends T>)visitor).visitDec_constants(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Dec_constantsContext dec_constants() throws RecognitionException {
		Dec_constantsContext _localctx = new Dec_constantsContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_dec_constants);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(207);
			id();
			setState(208);
			match(T__5);
			setState(209);
			constant_literal();
			setState(210);
			constants_statement_terminator();
			setState(211);
			dec_constants_continue();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Dec_constants_continueContext extends ParserRuleContext {
		public DeclarationContext declaration() {
			return getRuleContext(DeclarationContext.class,0);
		}
		public Dec_constantsContext dec_constants() {
			return getRuleContext(Dec_constantsContext.class,0);
		}
		public Dec_constants_continueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dec_constants_continue; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SLVisitor ) return ((SLVisitor<? extends T>)visitor).visitDec_constants_continue(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Dec_constants_continueContext dec_constants_continue() throws RecognitionException {
		Dec_constants_continueContext _localctx = new Dec_constants_continueContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_dec_constants_continue);
		try {
			setState(215);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__1:
			case T__2:
			case T__3:
			case T__4:
				enterOuterAlt(_localctx, 1);
				{
				setState(213);
				declaration();
				}
				break;
			case ID:
				enterOuterAlt(_localctx, 2);
				{
				setState(214);
				dec_constants();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Constants_statement_terminatorContext extends ParserRuleContext {
		public Constants_statement_terminatorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_constants_statement_terminator; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SLVisitor ) return ((SLVisitor<? extends T>)visitor).visitConstants_statement_terminator(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Constants_statement_terminatorContext constants_statement_terminator() throws RecognitionException {
		Constants_statement_terminatorContext _localctx = new Constants_statement_terminatorContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_constants_statement_terminator);
		try {
			setState(219);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__6:
				enterOuterAlt(_localctx, 1);
				{
				setState(217);
				match(T__6);
				}
				break;
			case T__1:
			case T__2:
			case T__3:
			case T__4:
			case ID:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Dec_variablesContext extends ParserRuleContext {
		public Id_listContext id_list() {
			return getRuleContext(Id_listContext.class,0);
		}
		public Structured_typeContext structured_type() {
			return getRuleContext(Structured_typeContext.class,0);
		}
		public Var_statement_terminatorContext var_statement_terminator() {
			return getRuleContext(Var_statement_terminatorContext.class,0);
		}
		public Dec_variables_continueContext dec_variables_continue() {
			return getRuleContext(Dec_variables_continueContext.class,0);
		}
		public Dec_variablesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dec_variables; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SLVisitor ) return ((SLVisitor<? extends T>)visitor).visitDec_variables(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Dec_variablesContext dec_variables() throws RecognitionException {
		Dec_variablesContext _localctx = new Dec_variablesContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_dec_variables);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(221);
			id_list();
			setState(222);
			match(T__7);
			setState(223);
			structured_type();
			setState(224);
			var_statement_terminator();
			setState(225);
			dec_variables_continue();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Id_listContext extends ParserRuleContext {
		public IdContext id() {
			return getRuleContext(IdContext.class,0);
		}
		public Id_list_contContext id_list_cont() {
			return getRuleContext(Id_list_contContext.class,0);
		}
		public Id_listContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_id_list; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SLVisitor ) return ((SLVisitor<? extends T>)visitor).visitId_list(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Id_listContext id_list() throws RecognitionException {
		Id_listContext _localctx = new Id_listContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_id_list);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(227);
			id();
			setState(228);
			id_list_cont();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Id_list_contContext extends ParserRuleContext {
		public IdContext id() {
			return getRuleContext(IdContext.class,0);
		}
		public Id_list_contContext id_list_cont() {
			return getRuleContext(Id_list_contContext.class,0);
		}
		public Id_list_contContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_id_list_cont; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SLVisitor ) return ((SLVisitor<? extends T>)visitor).visitId_list_cont(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Id_list_contContext id_list_cont() throws RecognitionException {
		Id_list_contContext _localctx = new Id_list_contContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_id_list_cont);
		try {
			setState(235);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__8:
				enterOuterAlt(_localctx, 1);
				{
				setState(230);
				match(T__8);
				setState(231);
				id();
				setState(232);
				id_list_cont();
				}
				break;
			case T__7:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Dec_variables_continueContext extends ParserRuleContext {
		public Dec_variablesContext dec_variables() {
			return getRuleContext(Dec_variablesContext.class,0);
		}
		public DeclarationContext declaration() {
			return getRuleContext(DeclarationContext.class,0);
		}
		public Dec_variables_continueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dec_variables_continue; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SLVisitor ) return ((SLVisitor<? extends T>)visitor).visitDec_variables_continue(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Dec_variables_continueContext dec_variables_continue() throws RecognitionException {
		Dec_variables_continueContext _localctx = new Dec_variables_continueContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_dec_variables_continue);
		try {
			setState(239);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ID:
				enterOuterAlt(_localctx, 1);
				{
				setState(237);
				dec_variables();
				}
				break;
			case T__1:
			case T__2:
			case T__3:
			case T__4:
				enterOuterAlt(_localctx, 2);
				{
				setState(238);
				declaration();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Dec_typesContext extends ParserRuleContext {
		public IdContext id() {
			return getRuleContext(IdContext.class,0);
		}
		public Structured_typeContext structured_type() {
			return getRuleContext(Structured_typeContext.class,0);
		}
		public Types_statement_terminatorContext types_statement_terminator() {
			return getRuleContext(Types_statement_terminatorContext.class,0);
		}
		public Dec_types_continueContext dec_types_continue() {
			return getRuleContext(Dec_types_continueContext.class,0);
		}
		public Dec_typesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dec_types; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SLVisitor ) return ((SLVisitor<? extends T>)visitor).visitDec_types(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Dec_typesContext dec_types() throws RecognitionException {
		Dec_typesContext _localctx = new Dec_typesContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_dec_types);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(241);
			id();
			setState(242);
			match(T__7);
			setState(243);
			structured_type();
			setState(244);
			types_statement_terminator();
			setState(245);
			dec_types_continue();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Dec_types_continueContext extends ParserRuleContext {
		public DeclarationContext declaration() {
			return getRuleContext(DeclarationContext.class,0);
		}
		public Dec_typesContext dec_types() {
			return getRuleContext(Dec_typesContext.class,0);
		}
		public Dec_types_continueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dec_types_continue; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SLVisitor ) return ((SLVisitor<? extends T>)visitor).visitDec_types_continue(this);
			else return visitor.visitChildren(this);
		}
	}
